k8s-manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: python-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: python-app

  template:
    metadata:
      labels:
        app: python-app

    spec:
      containers:
        - name: python-app
          image: mohammadrezabazarjani/python-app:21f3b6639f66a09005702e6a4cd94724b4289ba3
          ports:
            - containerPort: 5000
