k8s-manifest/service.yml
apiVersion: v1
kind: Service

metadata:
  name: python-app-service

spec:
  type: ClusterIP

  selector:
    app: python-app

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
