k8s-manifest/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: python-app-route

spec:
  parentRefs:
    - name: traefik-gateway

  hostnames:
    - "python-app-test.com"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: python-app-service
          port: 8080
